RTL layout modifications
Minor RTL / LTR support code added.

Guidelines here:
https://developer.android.com/training/basics/supporting-devices/languages.html

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.micscopau.myfirstapp.MainActivity">
 
+    <!-- LTR and RTL formatting for pre and post API 17 included
+     (Left = Start)
+     (Right = End)
+    -->
+
     <EditText
         android:id="@+id/editText"
         android:layout_width="0dp"
@@ -14,20 +19,34 @@
         android:ems="10"
         android:hint="@string/edit_message"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintRight_toLeftOf="@+id/button"
+
+        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+
+        app:layout_constraintStart_toEndOf="@+id/editText"
+        app:layout_constraintLeft_toRightOf="@+id/editText"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
         android:onClick="sendMessage"
         android:text="@string/button_send"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
-        app:layout_constraintLeft_toRightOf="@+id/editText"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText" />
 </android.support.constraint.ConstraintLayout>
